# NVOFG

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-MIT  README.md  design.md
cmake/: Shaders.cmake  embed_spirv.cmake
crates/nvofg/: Cargo.toml
crates/nvofg-sys/: Cargo.toml  build.rs
crates/nvofg-sys/src/: lib.rs
crates/nvofg/examples/: support.rs
crates/nvofg/src/: lib.rs
docs/: hardware-capabilities.md  integration.md  plan-a-model-and-training.md  plan-a-native-framegen.md
docs/adr/: 0001-vulkan-native-optical-flow.md  0002-pipeline-architecture.md  0003-automatic-sync-and-modes.md  0004-cuda-tensor-core-backend.md  0006-ngx-gated-rr-dlaa.md  0007-fsr-xess-upscalers.md  0008-pathb-native-dlssg-loader.md
docs/analysis/: cuda-vs-vulkan.md
examples/: headless_interp.cpp
experiments/dlssg-native/: .gitignore  FUNCTIONAL_PHASE_PLAN.md  Makefile  RECON.md  eval.gdb  gate3_oracle_result.txt  load_output.txt  ngxfg_probe.c  nvapi_dump.c  pe_load.c  pe_probe.c  probe_output.txt  run_proton.sh  s5_host.c
include/: nvofg.h  nvofg_pacer.h
renderfx/: CMakeLists.txt  README.md  ROADMAP.md
renderfx/include/: renderfx.h
renderfx/src/: backends.cpp  context.cpp  ngx.cpp  ngx_probe.cpp  renderfx_internal.hpp  resolve.cpp  rr_debug.cpp  upscale.cpp  xess.cpp
renderfx/src/shaders/: rr_debug.slang  upscale_fsr.slang  upscale_native.slang  upscale_temporal.slang
renderfx/tests/: test_ngx.cpp  test_resolve.cpp  test_rr_debug.cpp  test_upscale.cpp
src/: context.cpp  internal.hpp  pacer.cpp  pipeline.cpp
src/shaders/: blockmatch.slang  common.slang  debug.slang  hint.slang  prep.slang  refine.slang  warp.slang
src/spike/: cuda_tensor.cu  cuda_vk_interop.cu  flow_dump.cpp  probe.cpp
tests/: test_lifecycle.cpp  test_pacer.cpp
