[package]
name = "nvofg-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Raw FFI bindings to the nvofg C ABI (native Vulkan frame generation on the NVIDIA Optical Flow Accelerator)."
repository = "https://github.com/SimonVitzethum/nvofg"
links = "nvofg"

[dependencies]
ash = { version = "0.38", default-features = false }
